# webrtcdemo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  clickable.yaml  main.cpp  manifest.json.in  partial_clean_and_rediff.sh  webrtcdemo.apparmor  webrtcdemo.desktop.in
plugins/Example/: CMakeLists.txt  example.cpp  example.h  plugin.cpp
po/: webrtcdemo.fredldotme.pot
qml/: Main.qml
